--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include AUTHORS.txt
 include LICENSE.txt
 include README.rst
-recursive-include tabbed_admin/static *
-recursive-include tabbed_admin/templates *
+recursive-include tabbed_admin_u/static *
+recursive-include tabbed_admin_u/templates *
